# khatir

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  BOARD.md  CONTRIBUTING.md  DECISIONS.md  GEMINI.md  LICENSE  Makefile  README.md  STATUS.md  docker-compose.yml  skills-lock.json
apps/api/: conftest.py  manage.py  pyproject.toml
apps/api/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
apps/api/config/settings/: base.py  dev.py  prod.py  test.py
apps/api/khatir/accounts/: admin.py  apps.py  auth_tokens.py  enums.py  managers.py  models.py  notifications.py  otp.py  profile_urls.py  serializers.py  services.py  throttling.py  urls.py  views.py
apps/api/khatir/admin_portal/: admin.py  admin_urls.py  apps.py  audit.py  audit_serializers.py  audit_views.py  auth_tokens.py  authentication.py  dashboard.py  dashboard_views.py  models.py  permissions.py  pricing_serializers.py  pricing_services.py  pricing_views.py  refund_views.py  serializers.py  services.py  throttling.py  urls.py  user_serializers.py  user_services.py  user_views.py  views.py
apps/api/khatir/ai_providers/: admin.py  admin_views.py  apps.py  client.py  enums.py  models.py  serializers.py
apps/api/khatir/billing/: admin.py  apps.py  enums.py  models.py  public_config.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/api/khatir/chatbot/: admin.py  apps.py  context.py  enums.py  flags.py  models.py  prompts.py  serializers.py  services.py  throttling.py  tools.py  urls.py  views.py
apps/api/khatir/compliance/: admin.py  apps.py  data_request_views.py  enums.py  models.py  serializers.py  urls.py  views.py
apps/api/khatir/core/: apps.py  audit.py  config.py  encryption.py  enums.py  exceptions.py  logging.py  models.py  observability.py  pagination.py  permissions.py  responses.py  storage.py  tasks.py
apps/api/khatir/dashboard/: __init__.py  apps.py  selectors.py  serializers.py  urls.py  views.py
apps/api/khatir/dmpforms/: admin.py  apps.py  assembler.py  dto.py  models.py  pdf.py  (+4 more)
apps/api/tests/: test_healthz.py
services/ai-gateway/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  router.py  usage.py
services/ai-gateway/providers/: __init__.py  asr.py  base.py  chat.py  ocr.py
services/ai-gateway/tests/: test_health.py  test_ocr.py  test_router.py  test_stub_providers.py  test_usage.py
(+1330 files in other folders)
