[project]
name = "khatir-ai-gateway"
version = "0.1.0"
description = "Khatir AI gateway — thin FastAPI router that all AI provider calls flow through (EPIC-14)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.15",
    "mypy>=1.18.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["config", "main"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-q"
